kubernetes/system/postgres/postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-authelia
  namespace: database
spec:
  ports:
  - port: 5432
  selector:
    app: postgres-authelia
  clusterIP: None
