kubernetes/system/postgres/service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-authelia
  namespace: database
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres-authelia
